--- a/todo/templates/todo/add_todo.html
+++ b/todo/templates/todo/add_todo.html
@@ -4,8 +4,34 @@
     <h2>Add a New ToDo Item</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Add ToDo</button>
+        {{ form.non_field_errors }}
+
+        <div class="form-group">
+            {{ form.title.label_tag }} {{ form.title }}
+            {{ form.title.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.description.label_tag }} {{ form.description }}
+            {{ form.description.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.due_date.label_tag }} {{ form.due_date }}
+            {{ form.due_date.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.status.label_tag }} {{ form.status }}
+            {{ form.status.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.category.label_tag }} {{ form.category }}
+            {{ form.category.errors }}
+        </div>
+
+        <button type="submit" class="btn btn-success">Save</button>
     </form>
-    <a href="{% url 'todo:todo_list' %}">Back to ToDo List</a>
+    <a href="{% url 'todo:todo_list' %}" class="btn btn-secondary">Back to ToDo List</a>
 {% endblock %}
