--- a/todo/templates/todo/edit_todo.html
+++ b/todo/templates/todo/edit_todo.html
@@ -6,13 +6,41 @@
     <h2>Edit To-Do Item</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.non_field_errors }}
+
+        <div class="form-group">
+            {{ form.title.label_tag }} {{ form.title }}
+            {{ form.title.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.description.label_tag }} {{ form.description }}
+            {{ form.description.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.due_date.label_tag }} {{ form.due_date }}
+            {{ form.due_date.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.status.label_tag }} {{ form.status }}
+            {{ form.status.errors }}
+        </div>
+
+        <div class="form-group">
+            {{ form.category.label_tag }} {{ form.category }}
+            {{ form.category.errors }}
+        </div>
+
         <button type="submit" name="save" class="btn btn-primary">Save</button>
     </form>
+
     <form method="post" action="{% url 'todo:confirm_delete' todo_item.id %}">
         {% csrf_token %}
         <button type="submit" name="delete" class="btn btn-danger">Delete</button>
     </form>
+
     <a href="{% url 'todo:todo_list' %}" class="btn btn-secondary">Back to List</a>
 </div>
 {% endblock %}
