--- a/templates/todo/todo_list.html
+++ b/templates/todo/todo_list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h2 class="mt-4 mb-4">To-Do List</h2>
+    <h2 class="mt-4 mb-4">Simple To-Do List</h2>
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
