--- a/templates/base.html
+++ b/templates/base.html
@@ -108,10 +108,10 @@
                 <a class="nav-link" href="{% url 'todo:todo_list' %}">To-Do's</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'todo:todo_by_categories' %}">Categories</a>
+                <a class="nav-link" href="{% url 'todo:todo_by_categories' %}">View by Category</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'todo:todo_by_status' %}">Statuses</a>
+                <a class="nav-link" href="{% url 'todo:todo_by_status' %}">View by Status</a>
             </li>
         </ul>
     </div>
